Parte Cuerpo HTML

--- a/index.html
+++ b/index.html
@@ -54,11 +54,75 @@
         <img src="imagenes/notion.png" alt="Notion" />
       </div>
   </div>
-
   <!-- Imagen del chat alineada a la derecha -->
   <div class="hero-image">
       <img src="imagenes/chatDaki.png" alt="Chat Image" class="chat-image">
   </div>
 </div>
+  <!-- Sección verde con descripción de funcionalidades -->
+  <section class="green-section">
+    <p>
+      We offer a wide range of features that are organized and productive,
+      such as task assignments, file sharing, and chat routing.
+    </p>
+  </section>
+
+  <!-- Sección con título y tarjetas de explicación -->
+  <section class="solution-section">
+    <h2 id="features-title">Select the Best Chat Management Solution for Your Team</h2>
+    <p id="features-subtitle" class="subtitle">
+      Our SaaS chat management solution offers a variety of features to help you
+      optimize communication and increase productivity.
+    </p>
+
+    <div class="cards-container">
+      <div class="card">
+        <h3 id="feature-task">Task Management</h3>
+        <p id="desc-task">Stay on top of your tasks and collaborate effectively.</p>
+      </div>
+      <div class="card">
+        <h3 id="feature-files">File Sharing</h3>
+        <p id="desc-files">Share files with your team instantly, securely, and reliably.</p>
+      </div>
+      <div class="card">
+        <h3>Chat Routing</h3>
+        <p>Route conversations to the right person at the right time.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sección extra verde: Program Manager / Integraciones -->
+  <section class="green-section program-manager">
+    <div class="pm-content">
+      <h2>Program Manager</h2>
+      <p>Manage all your projects in one centralized location.</p>
+      <div class="pm-placeholder">Program Manager Image</div>
+    </div>
+
+    <div class="workflow-content">
+      <h2>Integrate with Your Existing Workflows</h2>
+      <p>
+        Connect Daki with the tools you already use and love, making collaboration seamless.
+      </p>
+    </div>
+  </section>
+
+  <!-- Sección final azul: It's easy to get started -->
+  <section class="blue-section">
+    <h2>It's easy to get started</h2>
+    <div class="footer-links">
+      <a href="#">Product</a>
+      <a href="#">Pricing</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+    </div>
+  </section>
+
+  <!-- Footer opcional -->
+  <footer class="footer">
+    <p id="footer-rights">© 2025 Daki. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
